// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task should render the Task with completed status 1`] = `
Array [
  <input
    defaultChecked={true}
    type="checkbox"
/>,
  "Complete Task",
  " [",
  "complete",
  "]",
]
`;

exports[`Task should render the Task with incomplete status 1`] = `
Array [
  <input
    defaultChecked={false}
    type="checkbox"
/>,
  "Incomplete task",
  " [",
  "incomplete",
  "]",
]
`;
